Moved rust deps for testing purposes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 members = [
-    "edgeql-parser",
-    "edgeql-python",
+    "edb/edgeql-parser",
+    "edb/edgeql-python",
 ]
 
 [profile.release]
